Fixed spacing of overlay and carousel controls.

--- a/wp-content/themes/kinart/src/scss/components/carousel.scss
+++ b/wp-content/themes/kinart/src/scss/components/carousel.scss
@@ -34,6 +34,7 @@
   &__slide {
     text-align: center;
     padding-bottom: 1em;
+    line-height: 0;
     @include breakpoint($md) {
       padding-bottom: 0;
       min-width: $width-md;
@@ -57,6 +58,7 @@
     display: none;
     @include breakpoint($md) {
       display: block;
+      padding: 1em 0;
       .carousel__prev, .carousel__next {
         &:hover {
           cursor: pointer;
