--- a/wp-content/themes/kinart/src/scss/components/project-overlay.scss
+++ b/wp-content/themes/kinart/src/scss/components/project-overlay.scss
@@ -57,9 +57,8 @@
   &__controls {
     text-transform: uppercase;
     letter-spacing: 0.3em;
-    padding: 0 1em;
+    padding: 1em 0;
     @include breakpoint($md) {
-      padding: 0 2em 1em;
       top: 600px;
       position: absolute;
       right: 0;
